# mosir-sdk-rs

./: Cargo.toml  LICENSE  README.md  Taskfile.yaml  build.rs  public.graphqls  public.operations.graphql
examples/: smoke.rs
examples/discord-bot/: README.md
src/: client.rs  helpers.rs  lib.rs  sse.rs
