[package]
name = "mosir-sdk-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "mosir_sdk_rs"
path = "src/lib.rs"

[dependencies]
cynic = { version = "3.13.2", features = ["http-reqwest"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[build-dependencies]
cynic-codegen = "3.13.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

