[package]
name = "mosir-sdk-rs"
version = "0.1.6"
edition = "2021"
description = "Rust SDK for the Mosir public GraphQL API"
license = "LGPL-3.0-or-later"
repository = "https://github.com/mosir-social/mosir-sdk-rs"
readme = "README.md"
keywords = ["mosir", "graphql", "sdk", "cynic"]
categories = ["api-bindings"]

[lib]
name = "mosir_sdk_rs"
path = "src/lib.rs"

[dependencies]
cynic = { version = "3.13.2", features = ["http-reqwest"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
eventsource-stream = "0.2"
futures-util = "0.3"

[build-dependencies]
cynic-codegen = "3.13.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

